replacing linked lists with array lists